Job page is completed

--- a/dash.html
+++ b/dash.html
@@ -39,7 +39,7 @@
               <a href="employees-list.html" class="nav-link ">Employees</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link ">Jobs</a>
+              <a href="jobs-list.html" class="nav-link ">Jobs</a>
             </li>
           </ul>
           <form action="search" class="d-flex">
@@ -81,7 +81,7 @@
             <div class="card-body">
               <span class="fs-1">25+</span>
             </div>
-            <a href="#" class="card-footer small text-decoration-none text-white">View All Jobs</a>
+            <a href="jobs-list.html" class="card-footer small text-decoration-none text-white">View All Jobs</a>
           </div>
         </div>
       </div>
