--- a/jobs-list.html
+++ b/jobs-list.html
@@ -68,109 +68,99 @@
       <div class="row justify-content-center">
         <div class="col-md-2">
           <div class="list-group shador-sm small mb-3">
-            <div class="list-group-item active">Employees Data</div>
-            <a href="#" class="list-group-item list-group-item-action" data-bs-toggle="modal" data-bs-target="#add_employee"> Add Employee</a>
-            <a href="employees-list.html" class="list-group-item list-group-item-action"> View Employees</a>
+            <div class="list-group-item active">Jobs Data</div>
+            <a href="#" class="list-group-item list-group-item-action" data-bs-toggle="modal" data-bs-target="#add_job"> Add Job</a>
+            <a href="jobs-list.html" class="list-group-item list-group-item-action"> View Jobs</a>
           </div>
           <div class="list-group shador-sm small mb-3">
             <div class="list-group-item active">Related Links</div>
-            <a href="jobs-list.html" class="list-group-item list-group-item-action"> Jobs List</a>
+            <a href="employees-list.html" class="list-group-item list-group-item-action"> Employees List</a>
           </div>
         </div>
         <div class="col-md-8">
           <div class="card shadow-sm border-0 mb-3">
-            <div class="card-header text-bg-dark text-center">Employees List</div>
+            <div class="card-header text-bg-dark text-center">Jobs List</div>
             <table class="table table-sm small table-bordered align-middle mb-0">
               <tr class="table-secondary">
                 <th>ID</th>
-                <th>Employee ID</th>
-                <th>Name</th>
-                <th>Email ID</th>
+                <th>Job Name</th>
                 <th>Details</th>
                 <th>Edit</th>
                 <th>Delete</th>
               </tr>
               <tr>
                 <td>1</td>
-                <td>741</td>
-                <td>John Doe</td>
-                <td>johndoe@gmail.com</td>
+                <td>Graphic Designer</td>
                 <td>
                   <div class="d-grid">
-                    <a href="#" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#employee_detail"> Details</a>
+                    <a href="#" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#job_detail"> Details</a>
                   </div>
                 </td>
                 <td>
                   <div class="d-grid">
-                    <a href="#" class="btn btn-sm btn-warning" data-bs-toggle="modal" data-bs-target="#employee_edit"> Edit</a>
+                    <a href="#" class="btn btn-sm btn-warning" data-bs-toggle="modal" data-bs-target="#job_edit"> Edit</a>
                   </div>
                 </td>
                 <td>
                   <div class="d-grid">
-                    <a href="#" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#employee_delete"> Delete</a>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>741</td>
-                <td>John Doe</td>
-                <td>johndoe@gmail.com</td>
-                <td>
-                  <div class="d-grid">
-                    <a href="#" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#employee_detail"> Details</a>
-                  </div>
-                </td>
-                <td>
-                  <div class="d-grid">
-                    <a href="#" class="btn btn-sm btn-warning" data-bs-toggle="modal" data-bs-target="#employee_edit"> Edit</a>
-                  </div>
-                </td>
-                <td>
-                  <div class="d-grid">
-                    <a href="#" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#employee_delete"> Delete</a>
+                    <a href="#" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#job_delete"> Delete</a>
                   </div>
                 </td>
               </tr>
               <tr>
-                <td>1</td>
-                <td>741</td>
-                <td>John Doe</td>
-                <td>johndoe@gmail.com</td>
+                <td>2</td>
+                <td>Web Designer</td>
                 <td>
                   <div class="d-grid">
-                    <a href="#" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#employee_detail"> Details</a>
+                    <a href="#" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#job_detail"> Details</a>
                   </div>
                 </td>
                 <td>
                   <div class="d-grid">
-                    <a href="#" class="btn btn-sm btn-warning" data-bs-toggle="modal" data-bs-target="#employee_edit"> Edit</a>
+                    <a href="#" class="btn btn-sm btn-warning" data-bs-toggle="modal" data-bs-target="#job_edit"> Edit</a>
                   </div>
                 </td>
                 <td>
                   <div class="d-grid">
-                    <a href="#" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#employee_delete"> Delete</a>
+                    <a href="#" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#job_delete"> Delete</a>
                   </div>
                 </td>
               </tr>
               <tr>
-                <td>1</td>
-                <td>741</td>
-                <td>John Doe</td>
-                <td>johndoe@gmail.com</td>
+                <td>3</td>
+                <td>Web Developer</td>
                 <td>
                   <div class="d-grid">
-                    <a href="#" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#employee_detail"> Details</a>
+                    <a href="#" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#job_detail"> Details</a>
                   </div>
                 </td>
                 <td>
                   <div class="d-grid">
-                    <a href="#" class="btn btn-sm btn-warning" data-bs-toggle="modal" data-bs-target="#employee_edit"> Edit</a>
+                    <a href="#" class="btn btn-sm btn-warning" data-bs-toggle="modal" data-bs-target="#job_edit"> Edit</a>
                   </div>
                 </td>
                 <td>
                   <div class="d-grid">
-                    <a href="#" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#employee_delete"> Delete</a>
+                    <a href="#" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#job_delete"> Delete</a>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>Digital Marketing</td>
+                <td>
+                  <div class="d-grid">
+                    <a href="#" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#job_detail"> Details</a>
+                  </div>
+                </td>
+                <td>
+                  <div class="d-grid">
+                    <a href="#" class="btn btn-sm btn-warning" data-bs-toggle="modal" data-bs-target="#job_edit"> Edit</a>
+                  </div>
+                </td>
+                <td>
+                  <div class="d-grid">
+                    <a href="#" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#job_delete"> Delete</a>
                   </div>
                 </td>
               </tr>
@@ -180,12 +170,12 @@
       </div>
     </div>
     <!--Employees Data-->
-    <!--Add Employee Modal-->
-    <div class="modal fade" id="add_employee" data-bs-backdrop="static" tabindex="-1" aria-hidden="true" style="backdrop-filter: blur(5px);">
+    <!--Add Jobs  Modal-->
+    <div class="modal fade" id="add_job" data-bs-backdrop="static" tabindex="-1" aria-hidden="true" style="backdrop-filter: blur(5px);">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header text-bg-dark">
-            <h5 class="modal-title">Add Employee Details</h5>
+            <h5 class="modal-title">Add Job Details</h5>
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="close"></button>
           </div>
           <div class="modal-body">
@@ -197,40 +187,14 @@
                       <input type="date" class="form-control form-control-sm" required>
                     </div>
                   </div>
-                  <div class="col-md-6">
-                    <div class="mb-3">
-                      <input type="text" class="form-control form-control-sm" placeholder="First Name" required>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="mb-3">
-                      <input type="text" class="form-control form-control-sm" placeholder="Last Name" required>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="mb-3">
-                      <input type="email" class="form-control form-control-sm" placeholder="Email" required>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="mb-3">
-                      <input type="tel" class="form-control form-control-sm" placeholder="Phone" required>
-                    </div>
-                  </div>
                   <div class="col-md-12">
                     <div class="mb-3">
-                      <select class="form-select form-select-sm" aria-label="Job Assigned">
-                        <option selected>Select job for Employee</option>
-                        <option value="Graphic Designer">Graphic Designer</option>
-                        <option value="Web Designer">Web Designer</option>
-                        <option value="Web Developer">Web Developer</option>
-                        <option value="Digital Marketing">Digital Marketing</option>
-                      </select>
+                      <input type="text" class="form-control form-control-sm" placeholder="Job Name" required>
                     </div>
                   </div>
                   <div class="col-md-10">
                     <div class="d-grid">
-                      <button type="submit" class="btn btn-success btn-sm">Add Employee</button>
+                      <button type="submit" class="btn btn-success btn-sm">Add Job</button>
                     </div>
                   </div>
                   <div class="col-md-2">
@@ -245,13 +209,13 @@
         </div>
       </div>
     </div>
-    <!--Add Employee Modal-->
-    <!-- Employee Details Modal-->
-    <div class="modal fade" id="employee_detail" data-bs-backdrop="static" tabindex="-1" aria-hidden="true" style="backdrop-filter: blur(5px);">
+    <!--Add Jobs Modal-->
+    <!-- Job Details Modal-->
+    <div class="modal fade" id="job_detail" data-bs-backdrop="static" tabindex="-1" aria-hidden="true" style="backdrop-filter: blur(5px);">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header text-bg-dark">
-            <h5 class="modal-title">Employee Details</h5>
+            <h5 class="modal-title">Job Details</h5>
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="close"></button>
           </div>
           <div class="modal-body p-0">
@@ -261,45 +225,29 @@
                 <td>1</td>
               </tr>
               <tr>
-                <th>Employee ID</th>
-                <td>741</td>
-              </tr>
-              <tr>
-                <th>First Name</th>
-                <td>John</td>
-              </tr>
-              <tr>
-                <th>Last Name</th>
-                <td>Doe</td>
-              </tr>
-              <tr>
-                <th>Email ID</th>
-                <td>johndoe@gmail.com</td>
-              </tr>
-              <tr>
-                <th>Phone</th>
-                <td>7543754732</td>
-              </tr>
-              <tr>
-                <th>Joining Data</th>
+                <th>Date</th>
                 <td>25th July 2022</td>
+              </tr>
+              <tr>
+                <th>Job Name</th>
+                <td>Graphic Designer</td>
               </tr>
             </table>
           </div>
           <div class="modal-footer">
-            <a href="#" class="btn btn-sm btn-warning" data-bs-toggle="modal" data-bs-target="#employee_edit">Edit Details</a>
+            <a href="#" class="btn btn-sm btn-warning" data-bs-toggle="modal" data-bs-target="#job_edit">Edit Details</a>
             <a href="#" class=" btn btn-sm btn-primary" data-bs-dismiss="modal" aria-label="close">Close</a>
           </div>
         </div>
       </div>
     </div>
-    <!--Employee Details Modal-->
-    <!--Edit Employee Modal-->
-    <div class="modal fade" id="employee_edit" data-bs-backdrop="static" tabindex="-1" aria-hidden="true" style="backdrop-filter: blur(5px);">
+    <!--Job Details Modal-->
+    <!--Edit Job Modal-->
+    <div class="modal fade" id="job_edit" data-bs-backdrop="static" tabindex="-1" aria-hidden="true" style="backdrop-filter: blur(5px);">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header text-bg-dark">
-            <h5 class="modal-title">Edit Employee Details</h5>
+            <h5 class="modal-title">Edit Job Details</h5>
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="close"></button>
           </div>
           <div class="modal-body">
@@ -311,45 +259,19 @@
                       <input type="date" class="form-control form-control-sm" value="2022-07-25" required>
                     </div>
                   </div>
-                  <div class="col-md-6">
-                    <div class="mb-3">
-                      <input type="text" class="form-control form-control-sm" placeholder="First Name" value="John" required>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="mb-3">
-                      <input type="text" class="form-control form-control-sm" placeholder="Last Name" value="Doe" required>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="mb-3">
-                      <input type="email" class="form-control form-control-sm" placeholder="Email" value="johndoe@gmail.com" required>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="mb-3">
-                      <input type="tel" class="form-control form-control-sm" placeholder="Phone" value="7543754732" required>
-                    </div>
-                  </div>
                   <div class="col-md-12">
                     <div class="mb-3">
-                      <select class="form-select form-select-sm" aria-label="Job Assigned">
-                        <option>Select job for Employee</option>
-                        <option selected value="Graphic Designer">Graphic Designer</option>
-                        <option value="Web Designer">Web Designer</option>
-                        <option value="Web Developer">Web Developer</option>
-                        <option value="Digital Marketing">Digital Marketing</option>
-                      </select>
+                      <input type="text" class="form-control form-control-sm" placeholder="Job Name" value="Graphic Designer" required>
                     </div>
                   </div>
                   <div class="col-md-10">
                     <div class="d-grid">
-                      <button type="submit" class="btn btn-warning btn-sm">Update Employee</button>
+                      <button type="submit" class="btn btn-warning btn-sm">Update Job</button>
                     </div>
                   </div>
                   <div class="col-md-2">
                     <div class="d-grid">
-                      <button type="submit" class="btn btn-success btn-sm" data-bs-dismiss="modal" aria-label="Close">Close</button>
+                      <button type="submit" class="btn btn-danger btn-sm" data-bs-dismiss="modal" aria-label="Close">Close</button>
                     </div>
                   </div>
                 </div>
@@ -359,14 +281,14 @@
         </div>
       </div>
     </div>
-    <!--Edit Employee Modal-->
-    <!-- Employee Delete Modal-->
-    <div class="modal fade" id="employee_delete" data-bs-backdrop="static" tabindex="-1" aria-hidden="true" style="backdrop-filter: blur(5px);">
+    <!--Edit Job Modal-->
+    <!-- Job Delete Modal-->
+    <div class="modal fade" id="job_delete" data-bs-backdrop="static" tabindex="-1" aria-hidden="true" style="backdrop-filter: blur(5px);">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-body text-center d-flex justify-content-between align-items-center">
-            <h4 class="fw-light m-0">Do you want to delete <strong>
-                <q>John Doe</q>
+            <h4 class="fw-light m-0">Do you really want to delete job <strong>
+                <q>Graphic Designer</q>
               </strong>
             </h4>
             <button type="button" class="btn-close ms-auto" data-bs-target="modal" aria-label="Close"></button>
@@ -378,7 +300,7 @@
         </div>
       </div>
     </div>
-    <!--Employee Delete Modal-->
+    <!--Job Delete Modal-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
